# Gazebo-DRL-Navigation

./: CMakeLists.txt  README.md  package.xml
include/: gazebo_env_io.h  position_generator.h  task_env_io.h  task_env_io_backup_one_car.h
launch/: avoidance_collision_16_agent.launch  default.launch  maze.launch  multi_agents.launch  one_agents.launch
log/: logger.txt
msg/: control_group_msgs.msg  control_msgs.msg  state_group_msgs.msg  state_msgs.msg
param/: env.yaml
src/: main.cpp  position_generator.cpp  task_env_io.cpp  task_env_io_backup.cpp
srv/: SimpleCtrl.srv
urdf/: edge_1.urdf  edge_2.urdf  edge_3.urdf  edge_4.urdf  target_1.urdf  target_2.urdf  target_3.urdf  target_4.urdf  target_5.urdf  target_6.urdf  target_7.urdf  target_8.urdf
worlds/: base_maze.world  base_maze_circle.world  empty.world
